--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view">I use <a href="https://obsidian.md">Obsidian</a> to maintain this site with markdown. It is free and open source.</p>
         {% endif %}
 
         {% if site.show_downloads %}
