--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view">I use <a href="https://obsidian.md">Obsidian</a> to maintain this site with markdown. It is free and open source.</p>
+        <p class="view"></p>
         {% endif %}
 
         {% if site.show_downloads %}
@@ -48,6 +48,7 @@
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
+          <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a><br>Markdown driven content using <a href="https://obsidian.md">Obsidian</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
