--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view">Link <a href="">here</a></p>
+        <p class="view">Link <a href="https://www.linkedin.com/in/stevegoulet/">Linked In Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
